Fix global CORS configuration in SecurityConfig and WebSocketConfig